Final fix: removed target folder and updated gitignore